# server/Application/Models/Dtos/BroadcastModels/ServerBroadcastsLiveDataToDashboard.cs
@@ -4,6 +4,5 @@ namespace Application.Models.Dtos.BroadcastModels;
 
 public class ServerBroadcastsLiveDataToDashboard : ApplicationBaseDto
 {
-    public List<Devicelog> Logs { get; set; }
     public override string eventType { get; set; } = nameof(ServerBroadcastsLiveDataToDashboard);
 }
